crates/compiler/cypress/tests/snapshots/test_parse__packed_singleton_list_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "[1]\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr (BeginList Num=>Int@1 EndList) EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
List([IntBase10("1")])

[=== formatted below ===]
[1]
