crates/compiler/cypress/tests/snapshots/test_parse__parenthesized_type_def_space_before_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "A : b\na\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            UpperIdent=>UpperIdent@0
            InlineTypeColon=>OpColon@1
            Ident=>LowerIdent@2
        EndTypeOrTypeAlias)
        HintExpr
        Ident=>LowerIdent@3
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(UpperIdent("A"), Name("b"))
Ident("a")

[=== formatted below ===]

