crates/compiler/cypress/tests/snapshots/test_parse__parenthetical_apply_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "(whee) 1\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            (BeginParens Ident=>LowerIdent@1 EndParens)
            InlineApply=>CloseRound@2
            Num=>Int@3
        EndApply)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Apply(Ident("whee"), [IntBase10("1")])

[=== formatted below ===]

