crates/compiler/cypress/tests/snapshots/test_parse__parenthetical_field_qualified_var_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "(One.Two.rec).field\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (*
            (BeginParens
                (*
                    (* ModuleName=>UpperIdent@1 DotModuleUpperIdent)
                    DotIdent=>NoSpaceDotLowerIdent@3
                EndFieldAccess)
            EndParens)
            DotIdent=>NoSpaceDotLowerIdent@5
        EndFieldAccess)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
RecordAccess(RecordAccess(ModuleUpperName("One", ".Two"), ".rec"), ".field")

[=== formatted below ===]

